--- a/assets/styles.css
+++ b/assets/styles.css
@@ -12,6 +12,7 @@ h2 {
     font-weight: bold;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
+
 .page_cell{
     margin-top: 5px;
     margin-bottom: 5px;
@@ -21,42 +22,35 @@ h2 {
 }
 
 #main_dropdown {
-    width: 50%;
+    width: 90%;
     margin-left: auto;
     margin-right: auto;
-}
-.button_text {
-    font-size: 32px;
-    opacity: 50%;
-    color: white;
-    margin: 0px;
+    margin-bottom: 10px;
 }
 
 #main_layout{
-    background-color: #222;
-    /* background-image: url('sunshine.jpg'); */
-    /* background-blend-mode: lighten; */
+    background-color: #333;
     background-size: cover;
     height: 100vh;
     width: 100vw;
     overflow-x: hidden;
 }
+
 .graph1 {
     width: 100%;
     height: 100%;
 }
+
 .graph-card{
     border-radius: 20px;
-    height: 350px;
+    /* background-color: #568; */
 }
 
 .entity_card {
-    /* max-width: 500px; */
-    /* min-width: 250px; */
     width: 100%;
     border-radius: 20px;
-    /* height: 350px; */
     margin-bottom: 10px;
+    /* background-color: #645; */
 }
 
 .entity_card_footer {
@@ -66,4 +60,9 @@ h2 {
 .bio_text {
     max-height: 150px;
     overflow-y: auto;
+}
+
+.release_text {
+    font-weight: bold;
+
 }
